Small tweaks to make author tests happy.

--- a/dist.ini
+++ b/dist.ini
@@ -41,6 +41,9 @@ Data::Printer = 0.36
 [Test::Perl::Critic]
 [Test::CPAN::Changes]
 [Test::PodSpelling]
+stopwords = emptor
+stopwords = resultset
+stopwords = resultsets
 
 [Test::Synopsis]
 [NextRelease]
